# bracketeer

./: .gitignore  .secrets.json.template  CLAUDE.md  DEVELOPER.md  README.md  event.json  gunicorn.conf.py  main.py  precommit.py  pyproject.toml  pytest.ini  tf_lru.sqlite  wsgi.py
_notebooks/: RankingMath.ipynb
bracketeer/: RankingMath.ipynb  __init__.py  __main__.py  config.py  setup_wizard.py  tf_test.py  utils.py
bracketeer/api_challonge/: api.py
bracketeer/api_truefinals/: api.py  cached_api.py  cached_wrapper.py
bracketeer/debug/: debug.py
bracketeer/matches/: match_results.py
bracketeer/screens/: user_screens.py
bracketeer/templates/: _partial_template_matches.html  app_settings.html  base.html  ctimer.html  homepage.html
bracketeer/templates/queueing/: fight_log.html  tournament_archive.html  tournament_summary.html  upcoming_matches.html
bracketeer/templates/setup_wizard/: complete.html  confirm.html  credentials.html  event.html  start.html  tournaments.html
bracketeer/util/: wrappers.py
scripts/: logs-production.sh  restart-production.sh  start-development.sh  start-production.sh  status-production.sh  stop-production.sh
src/: RankingMath.ipynb  app.py  config.py  event.json  tf_test.py  utils.py
src/api_challonge/: api.py
src/api_truefinals/: api.py  cached_api.py  cached_wrapper.py
src/debug/: debug.py
src/matches/: match_results.py
src/screens/templates/: screen_base.html  vert_timer.html
src/templates/: _partial_template_matches.html  app_settings.html  base.html  ctimer.html
src/util/: wrappers.py
tests/: conftest.py  test_debug_socketio.py  test_fight_log.py  test_homepage_dashboard.py  test_match_queue_enhancements.py  test_port_configuration.py  test_simple_socketio.py  test_socketio_integration.py  test_tapout_functionality.py
