[project]
name = "bracketeer"
version = "0.1.0"
description = "Combat robotics arena control tooling.  WIP."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dynaconf>=3.2.4",
    "flask-apscheduler>=1.13.1",
    "flask-caching>=2.3.1",
    "flask-socketio>=5.3.6",
    "flask[async]>=3.1.0",
    "httpx>=0.25.1",
    "piccolo[sqlite]>=1.22.0",
]

[project.scripts]
bracketeer = "bracketeer.__main__:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "playwright>=1.52.0",
    "pyproject-autoflake>=1.0.2",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-socketio>=5.13.0",
    "requests>=2.32.3",
    "ruff>=0.11.4",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["bracketeer*"]

[tool.ruff.lint]
select = ["F401", "I", "PERF", "YTT", "ANN"]
